exemplo de teste

--- a/examples/cloze/_output_/sc_or_s_sol.Rmd
+++ b/examples/cloze/_output_/sc_or_s_sol.Rmd
@@ -1,6 +1,6 @@
 # Solution to model C:\Users\pedrocruz\Documents\GitHub\pyequa\examples\cloze\_output_
 
-Produced in 2024-10-28 21:48:36
+Produced in 2024-10-29 21:34:42
 
 # Problem 01 - CLOZE
 
@@ -8,50 +8,30 @@ Produced in 2024-10-28 21:48:36
 
 O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
 
-Com uma amostra de tamanho **'2'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
+**(a)** Verifique que \(s_c^2 > s^2\).
+
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
+pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho , %100%deve\~%0%pode ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
-pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
+Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000',  ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
+pois o desvio padrão corrigido é  desvio padrão não corrigido.
 
 
 Sabendo
 
-{tamanho}
+{podedeve, justificação}
 
 e usando
 
-Eq(tamanho, podedeve)
+Eq(tamanho, corrigido + justificação)
+
+Eq(tamanho, corrigido + podedeve)
 
 determina-se
 
-{podedeve}
-
-Sabendo
-
-{tamanho, podedeve}
-
-e usando
-
-Eq(podedeve, corrigido)
-
-determina-se
-
-{corrigido}
-
-Sabendo
-
-{tamanho, podedeve, corrigido}
-
-e usando
-
-Eq(corrigido, justificação)
-
-determina-se
-
-{justificação}
+{tamanho, corrigido}
 
 
 
@@ -59,50 +39,30 @@ determina-se
 
 O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
 
-Com uma amostra de tamanho **'4'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
+**(a)** Verifique que \(s_c^2 > s^2\).
+
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
+pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho , %100%deve\~%0%pode ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
-pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
+Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000',  ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
+pois o desvio padrão corrigido é  desvio padrão não corrigido.
 
 
 Sabendo
 
-{tamanho}
+{podedeve, justificação}
 
 e usando
 
-Eq(tamanho, podedeve)
+Eq(tamanho, corrigido + justificação)
+
+Eq(tamanho, corrigido + podedeve)
 
 determina-se
 
-{podedeve}
-
-Sabendo
-
-{tamanho, podedeve}
-
-e usando
-
-Eq(podedeve, corrigido)
-
-determina-se
-
-{corrigido}
-
-Sabendo
-
-{tamanho, podedeve, corrigido}
-
-e usando
-
-Eq(corrigido, justificação)
-
-determina-se
-
-{justificação}
+{tamanho, corrigido}
 
 
 # Problem 02 - CLOZE
@@ -111,553 +71,9 @@ determina-se
 
 O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
 
-Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
+**(a)** Verifique que \(s_c^2 > s^2\).
 
-## answer
-
-Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000',  ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
-pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
-
-
-Sabendo
-
-{podedeve}
-
-e usando
-
-Eq(tamanho, podedeve)
-
-determina-se
-
-{tamanho}
-
-Sabendo
-
-{tamanho, podedeve}
-
-e usando
-
-Eq(podedeve, corrigido)
-
-determina-se
-
-{corrigido}
-
-Sabendo
-
-{tamanho, podedeve, corrigido}
-
-e usando
-
-Eq(corrigido, justificação)
-
-determina-se
-
-{justificação}
-
-
-
-## variante 02 (excel row is 004)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
-
-Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
-
-## answer
-
-Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000',  ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
-pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
-
-
-Sabendo
-
-{podedeve}
-
-e usando
-
-Eq(tamanho, podedeve)
-
-determina-se
-
-{tamanho}
-
-Sabendo
-
-{tamanho, podedeve}
-
-e usando
-
-Eq(podedeve, corrigido)
-
-determina-se
-
-{corrigido}
-
-Sabendo
-
-{tamanho, podedeve, corrigido}
-
-e usando
-
-Eq(corrigido, justificação)
-
-determina-se
-
-{justificação}
-
-
-# Problem 03 - CLOZE
-
-## variante 01 (excel row is 005)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
-
-Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%0%deve\~%100%pode} ser usado o desvio padrão **corrigido ou não** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
-
-## answer
-
-Com uma amostra de tamanho %0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000', %0%deve\~%100%pode ser usado o desvio padrão  
-pois o desvio padrão corrigido é %0%maior, ou bastante maior, que o\~%100%aproximado ao desvio padrão não corrigido.
-
-
-Sabendo
-
-{corrigido}
-
-e usando
-
-Eq(corrigido, justificação)
-
-determina-se
-
-{justificação}
-
-Sabendo
-
-{corrigido, justificação}
-
-e usando
-
-Eq(podedeve, corrigido)
-
-determina-se
-
-{podedeve}
-
-Sabendo
-
-{podedeve, justificação, corrigido}
-
-e usando
-
-Eq(tamanho, podedeve)
-
-determina-se
-
-{tamanho}
-
-
-
-## variante 02 (excel row is 006)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
-
-Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%0%deve\~%100%pode} ser usado o desvio padrão **corrigido ou não** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
-
-## answer
-
-Com uma amostra de tamanho %0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000', %0%deve\~%100%pode ser usado o desvio padrão  
-pois o desvio padrão corrigido é %0%maior, ou bastante maior, que o\~%100%aproximado ao desvio padrão não corrigido.
-
-
-Sabendo
-
-{corrigido}
-
-e usando
-
-Eq(corrigido, justificação)
-
-determina-se
-
-{justificação}
-
-Sabendo
-
-{corrigido, justificação}
-
-e usando
-
-Eq(podedeve, corrigido)
-
-determina-se
-
-{podedeve}
-
-Sabendo
-
-{podedeve, justificação, corrigido}
-
-e usando
-
-Eq(tamanho, podedeve)
-
-determina-se
-
-{tamanho}
-
-
-# Problem 04 - CLOZE
-
-## variante 01 (excel row is 001)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
-
-Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-## answer
-
-Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000', %100%deve\~%0%pode ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
-pois o desvio padrão corrigido é  desvio padrão não corrigido.
-
-
-Sabendo
-
-{justificação}
-
-e usando
-
-Eq(corrigido, justificação)
-
-determina-se
-
-{corrigido}
-
-Sabendo
-
-{corrigido, justificação}
-
-e usando
-
-Eq(podedeve, corrigido)
-
-determina-se
-
-{podedeve}
-
-Sabendo
-
-{podedeve, justificação, corrigido}
-
-e usando
-
-Eq(tamanho, podedeve)
-
-determina-se
-
-{tamanho}
-
-
-
-## variante 02 (excel row is 002)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
-
-Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-## answer
-
-Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000', %100%deve\~%0%pode ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
-pois o desvio padrão corrigido é  desvio padrão não corrigido.
-
-
-Sabendo
-
-{justificação}
-
-e usando
-
-Eq(corrigido, justificação)
-
-determina-se
-
-{corrigido}
-
-Sabendo
-
-{corrigido, justificação}
-
-e usando
-
-Eq(podedeve, corrigido)
-
-determina-se
-
-{podedeve}
-
-Sabendo
-
-{podedeve, justificação, corrigido}
-
-e usando
-
-Eq(tamanho, podedeve)
-
-determina-se
-
-{tamanho}
-
-
-# Problem 05 - CLOZE
-
-## variante 01 (excel row is 003)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
-
-Com uma amostra de tamanho **'10'**, **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
-
-## answer
-
-Com uma amostra de tamanho ,  ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
-pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
-
-
-Sabendo
-
-{tamanho, podedeve}
-
-e usando
-
-Eq(podedeve, corrigido)
-
-determina-se
-
-{corrigido}
-
-Sabendo
-
-{tamanho, podedeve, corrigido}
-
-e usando
-
-Eq(corrigido, justificação)
-
-determina-se
-
-{justificação}
-
-
-
-## variante 02 (excel row is 004)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
-
-Com uma amostra de tamanho **'20'**, **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
-
-## answer
-
-Com uma amostra de tamanho ,  ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
-pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
-
-
-Sabendo
-
-{tamanho, podedeve}
-
-e usando
-
-Eq(podedeve, corrigido)
-
-determina-se
-
-{corrigido}
-
-Sabendo
-
-{tamanho, podedeve, corrigido}
-
-e usando
-
-Eq(corrigido, justificação)
-
-determina-se
-
-{justificação}
-
-
-# Problem 06 - CLOZE
-
-## variante 01 (excel row is 005)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
-
-Com uma amostra de tamanho **'100'**, {:MULTICHOICE_S:%0%deve\~%100%pode} ser usado o desvio padrão **corrigido ou não** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
-
-## answer
-
-Com uma amostra de tamanho , %0%deve\~%100%pode ser usado o desvio padrão  
-pois o desvio padrão corrigido é %0%maior, ou bastante maior, que o\~%100%aproximado ao desvio padrão não corrigido.
-
-
-Sabendo
-
-{tamanho, corrigido}
-
-e usando
-
-Eq(tamanho, podedeve)
-
-determina-se
-
-{podedeve}
-
-Sabendo
-
-{tamanho, podedeve, corrigido}
-
-e usando
-
-Eq(corrigido, justificação)
-
-determina-se
-
-{justificação}
-
-
-
-## variante 02 (excel row is 006)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
-
-Com uma amostra de tamanho **'1000'**, {:MULTICHOICE_S:%0%deve\~%100%pode} ser usado o desvio padrão **corrigido ou não** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
-
-## answer
-
-Com uma amostra de tamanho , %0%deve\~%100%pode ser usado o desvio padrão  
-pois o desvio padrão corrigido é %0%maior, ou bastante maior, que o\~%100%aproximado ao desvio padrão não corrigido.
-
-
-Sabendo
-
-{tamanho, corrigido}
-
-e usando
-
-Eq(tamanho, podedeve)
-
-determina-se
-
-{podedeve}
-
-Sabendo
-
-{tamanho, podedeve, corrigido}
-
-e usando
-
-Eq(corrigido, justificação)
-
-determina-se
-
-{justificação}
-
-
-# Problem 07 - CLOZE
-
-## variante 01 (excel row is 001)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
-
-Com uma amostra de tamanho **'2'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-## answer
-
-Com uma amostra de tamanho , %100%deve\~%0%pode ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
-pois o desvio padrão corrigido é  desvio padrão não corrigido.
-
-
-Sabendo
-
-{tamanho, justificação}
-
-e usando
-
-Eq(tamanho, podedeve)
-
-determina-se
-
-{podedeve}
-
-Sabendo
-
-{tamanho, podedeve, justificação}
-
-e usando
-
-Eq(corrigido, justificação)
-
-determina-se
-
-{corrigido}
-
-
-
-## variante 02 (excel row is 002)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
-
-Com uma amostra de tamanho **'4'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-## answer
-
-Com uma amostra de tamanho , %100%deve\~%0%pode ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
-pois o desvio padrão corrigido é  desvio padrão não corrigido.
-
-
-Sabendo
-
-{tamanho, justificação}
-
-e usando
-
-Eq(tamanho, podedeve)
-
-determina-se
-
-{podedeve}
-
-Sabendo
-
-{tamanho, podedeve, justificação}
-
-e usando
-
-Eq(corrigido, justificação)
-
-determina-se
-
-{corrigido}
-
-
-# Problem 08 - CLOZE
-
-## variante 01 (excel row is 003)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
-
-Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão **corrigido** 
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão **corrigido** 
 pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
 ## answer
@@ -672,23 +88,13 @@ Sabendo
 
 e usando
 
-Eq(tamanho, podedeve)
+Eq(tamanho, corrigido + justificação)
+
+Eq(tamanho, justificação)
 
 determina-se
 
-{tamanho}
-
-Sabendo
-
-{tamanho, podedeve, corrigido}
-
-e usando
-
-Eq(corrigido, justificação)
-
-determina-se
-
-{justificação}
+{tamanho, justificação}
 
 
 
@@ -696,7 +102,9 @@ determina-se
 
 O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
 
-Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão **corrigido** 
+**(a)** Verifique que \(s_c^2 > s^2\).
+
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão **corrigido** 
 pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
 ## answer
@@ -711,180 +119,12 @@ Sabendo
 
 e usando
 
-Eq(tamanho, podedeve)
+Eq(tamanho, corrigido + justificação)
+
+Eq(tamanho, justificação)
 
 determina-se
 
-{tamanho}
-
-Sabendo
-
-{tamanho, podedeve, corrigido}
-
-e usando
-
-Eq(corrigido, justificação)
-
-determina-se
-
-{justificação}
-
-
-# Problem 09 - CLOZE
-
-## variante 01 (excel row is 005)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
-
-Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), **pode** ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} 
-pois o desvio padrão corrigido é **aproximado ao** desvio padrão não corrigido.
-
-## answer
-
-Com uma amostra de tamanho %0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000',  ser usado o desvio padrão %0%corrigido\~%100%corrigido ou não 
-pois o desvio padrão corrigido é  desvio padrão não corrigido.
-
-
-Sabendo
-
-{podedeve, justificação}
-
-e usando
-
-Eq(tamanho, podedeve)
-
-determina-se
-
-{tamanho}
-
-Sabendo
-
-{tamanho, podedeve, justificação}
-
-e usando
-
-Eq(corrigido, justificação)
-
-determina-se
-
-{corrigido}
-
-
-
-## variante 02 (excel row is 006)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
-
-Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), **pode** ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} 
-pois o desvio padrão corrigido é **aproximado ao** desvio padrão não corrigido.
-
-## answer
-
-Com uma amostra de tamanho %0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000',  ser usado o desvio padrão %0%corrigido\~%100%corrigido ou não 
-pois o desvio padrão corrigido é  desvio padrão não corrigido.
-
-
-Sabendo
-
-{podedeve, justificação}
-
-e usando
-
-Eq(tamanho, podedeve)
-
-determina-se
-
-{tamanho}
-
-Sabendo
-
-{tamanho, podedeve, justificação}
-
-e usando
-
-Eq(corrigido, justificação)
-
-determina-se
-
-{corrigido}
-
-
-# Problem 10 - CLOZE
-
-## variante 01 (excel row is 001)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
-
-Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-## answer
-
-Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000', %100%deve\~%0%pode ser usado o desvio padrão  
-pois o desvio padrão corrigido é  desvio padrão não corrigido.
-
-
-Sabendo
-
-{corrigido, justificação}
-
-e usando
-
-Eq(podedeve, corrigido)
-
-determina-se
-
-{podedeve}
-
-Sabendo
-
-{podedeve, justificação, corrigido}
-
-e usando
-
-Eq(tamanho, podedeve)
-
-determina-se
-
-{tamanho}
-
-
-
-## variante 02 (excel row is 002)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
-
-Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-## answer
-
-Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000', %100%deve\~%0%pode ser usado o desvio padrão  
-pois o desvio padrão corrigido é  desvio padrão não corrigido.
-
-
-Sabendo
-
-{corrigido, justificação}
-
-e usando
-
-Eq(podedeve, corrigido)
-
-determina-se
-
-{podedeve}
-
-Sabendo
-
-{podedeve, justificação, corrigido}
-
-e usando
-
-Eq(tamanho, podedeve)
-
-determina-se
-
-{tamanho}
+{tamanho, justificação}
 
 
